instancesdir=$(datadir)/$(PACKAGE)-$(VERSION)/instances

dist_instances_DATA = assignment_a1_1.txt assignment_a1_2.txt		\
assignment_a1_3.txt assignment_a1_4.txt assignment_a1_5.txt		\
assignment_a2_1.txt assignment_a2_2.txt assignment_a2_3.txt		\
assignment_a2_4.txt assignment_a2_5.txt assignment_b_10.txt		\
assignment_b_1.txt assignment_b_2.txt assignment_b_3.txt		\
assignment_b_4.txt assignment_b_5.txt assignment_b_6.txt		\
assignment_b_7.txt assignment_b_8.txt assignment_b_9.txt		\
assignment_toy.txt model_a1_1.txt model_a1_2.txt model_a1_3.txt		\
model_a1_4.txt model_a1_5.txt model_a2_1.txt model_a2_2.txt		\
model_a2_3.txt model_a2_4.txt model_a2_5.txt model_b_10.txt		\
model_b_1.txt model_b_2.txt model_b_3.txt model_b_4.txt model_b_5.txt	\
model_b_6.txt model_b_7.txt model_b_8.txt model_b_9.txt model_toy.txt
