bin_PROGRAMS = roadef2012-j10

roadef2012_j10_SOURCES = binary_heap.hpp hill_climbing.hpp instance.hpp	\
iterated_ls.hpp main.cpp parser.hpp parser.cpp pool.hpp		\
random_moves.hpp solution.hpp worker.hpp solution.cpp
roadef2012_j10_LDFLAGS = -all-static 
roadef2012_j10_LDADD = -lboost_program_options -lboost_thread -lpthread
